test/compile-errors/extern-warnings.crow
f void() extern<c> noctx

f void() extern<c> unsafe

g nat() global<c> noctx

g nat() global<c> unsafe
